<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/img"
    android:orientation="vertical"
    tools:context=".ResultsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/results"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/GainsBoro"
        android:textSize="30sp"/>
    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/trophy_img"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/hey_congratulation"
        android:textColor="@color/GainsBoro"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/GainsBoro"/>
    <TextView
        android:id = "@+id/tv_Sorce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@color/GainsBoro"
        android:textSize="22sp"
        android:textStyle="normal"/>
    <Button
        android:id="@+id/finishBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:background="@drawable/button_border_bg"
        android:text="@string/tryAgain"
        android:textSize="22sp"
        android:textColor="@color/GainsBoro"
        android:textStyle="bold"
        />
</LinearLayout>