<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/img"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!-- android:background = '@drawable/img" adding a background image for the application. -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/GainsBoro"
        android:textSize="30sp"
        android:textStyle="bold" />
    <!-- centering the text "Quiz Application to the center of the application because we set the width
    of the Textview to match the width of the application so to fix that we must use android:gravity = 'center'
    to center the text. -->


    <!-- CardView -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/GainsBoro"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"

            >
            <!--"Please enter your name label-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_enter_in_your_name"
                android:textColor="@color/graniteGrey"
                android:textSize="20sp"
                android:textStyle="bold"
                >
            </TextView>
            <!--Text Input-->

            <!--Text Input First Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/graniteGrey"
                android:layout_marginTop="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="20sp"
                    android:hint="@string/First_name"

                    />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Text Input Last Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/graniteGrey"
                android:layout_marginTop="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="20sp"
                    android:hint="@string/Last_name"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Start Button-->
            <Button
                android:id="@+id/strButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_border_bg"
                android:text="@string/start"
                android:textColor="@color/GainsBoro"
                android:textSize="25sp"
                android:textStyle="bold"

                >

            </Button>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>